--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=api
 spring.datasource.url=jdbc:mysql://localhost/vollmed_api
 spring.datasource.username=root
 spring.datasource.password=2411
+spring.jpa.show-sql=true
