--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost/vollmed_api
 spring.datasource.username=root
 spring.datasource.password=2411
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-stacktrace=never
+
